<resources>
    <string name="app_name">AnswerBot</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Update Info</string>
    <string name="title_activity_home">AnswerBot</string>
    <string name="title_activity_add_criteria">Add Criteria</string>
    <string name="title_activity_add_options">Add Answer</string>
    <string name="title_activity_donate_knowledge">Donate Knowledge</string>
    <string name="title_activity_get_recomend">Recommendation</string>
    <string name="title_activity_add_question">Add Question</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="action_search">Search</string>


    <string name="question">PlaceholderQuestion</string>
    <string name="questiondescription">PlaceholderQuestionDescription</string>
    <string name="addCriteria">Add Criteria</string>
    <string name="addOptions">Add Answer</string>
    <string name="rateAnswer">Rate Answer</string>
    <string name="shareQuestion">Share Question</string>
    <string name="donateKnowledge">Add Knowledge</string>
    <string name="getanswers">Get Answers</string>
    <string name="welcome_text">"Welcome! Now, let's get started!"</string>

    <string name="ques">Question: </string>
    <string name="description">Description: </string>
    <string name="placeHolderQuestion">placeHolderQuestion</string>
    <string name="searchHint">Search</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_custom_solution_adapter">CustomSolutionAdapter</string>
    <string name="title_activity_all_answers">Answers</string>

</resources>
