<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kaiwang.answerbot.GetRecomendActivity">

    <item android:id="@+id/add_criteria" android:title="@string/addCriteria"
        android:icon="@drawable/rate"
        android:orderInCategory="1" app:showAsAction="never" />
    <item android:id="@+id/add_answer" android:title="@string/addOptions"
        android:orderInCategory="2" app:showAsAction="never" />
    <item android:id="@+id/rate_answer" android:title="@string/rateAnswer"
        android:orderInCategory="3" app:showAsAction="never" />
    <item android:id="@+id/share_question" android:title="@string/shareQuestion"
        android:orderInCategory="4" app:showAsAction="never" />

</menu>
