<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/theWholeThing"
        android:background="@drawable/question_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:id="@+id/qquestion"
            android:text="@string/question"
            android:textSize="@dimen/header"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/question_vertical"
            android:layout_marginBottom="@dimen/question_vertical"
            android:id="@+id/buttonPanel"
            android:visibility="gone">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:id="@+id/qdescription"
            android:text="@string/questiondescription"
            android:textSize="@dimen/description"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/buttonblue"
                android:id="@+id/criteria"
                android:text="@string/addCriteria"
                android:layout_weight="1"
                android:onClick="addCriteria"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonblue"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:id="@+id/options"
                android:text="@string/addOptions"
                android:layout_weight="1"
                android:onClick="addOptions"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/buttongreen"
                android:id="@+id/donate"
                android:text="@string/donateKnowledge"
                android:layout_weight="1"
                android:onClick="donateKnowledge"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/buttongreen"
                android:id="@+id/answers"
                android:text="@string/getanswers"
                android:layout_weight="1"
                android:onClick="getAnswers"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
